--- a/docs/grammar.tex
+++ b/docs/grammar.tex
@@ -33,7 +33,7 @@
   <network> ::= `network' <ident> `(' [ <params> ] `)' \\`{' <network-decl> `}'
 
   <process> ::= [ `sync' | `async' ] `proc' <ident> \\ `(' [
-             <params> ] `)' \{ <declaration> \} `{' \{ <statement> \} `}'
+             <params> ] `)' \{ <declaration> \}\\ `{' \{ <statement> \} `}'
 
   <network-decl> ::= <instance>
   \alt <bus-decl>
@@ -43,14 +43,14 @@
   <declaration> ::= <var-decl>
   \alt <const-decl>
   \alt <bus-decl>
-  \alt <enum>
+  \alt <enum-decl>
   %\alt <function>
-  \alt <instance>
-  \alt <generate>
+  \alt <inst-decl>
+  \alt <gen-decl>
   
   <params> ::= <param> \{ , <param> \}
 
-  <param> ::= \{ `[' \{ <expression> \} `]' \} <direction> <ident>
+  <param> ::= [ `[' [ <integer> ] `]' ] <direction> <ident>
 
   <direction> ::= `in' (input signal)
   \alt `out' (output signal)
@@ -60,7 +60,11 @@
 
   <range> ::= `range' <expression> `to' <expression>
 
-  <const-decl> ::= `const' <ident> `:' <type-name> [ `=' <expression> ] `;'
+  <enum> ::= `enum' <ident> \\ `{' <enum-field> \{ `,' <enum-field>  \} `}' `;'
+
+  <enum-field> ::= <ident> [ `=' <integer> ]
+  
+  <const-decl> ::= `const' <ident> `:' <type-name> `=' <expression> `;'
 
   <bus-decl> ::= [ `exposed' ] `bus' <ident> \\ `\{' <bus-signal-decls> `\}'  `;'
 
@@ -70,7 +74,8 @@
 
 <bus-signal-decl> ::= <ident> `:' <type> [ `=' <expression> ] [ <range> ] `;'
 
-  <instance> ::= `instance' <instance-name> `of' <ident> \\`(' [ <param-map> { `,' <param-map> } ]`)' `;'
+  <inst-decl> ::= `instance' <instance-name> `of' <ident> \\`(' [ <param-map> 
+  \{ `,' <param-map> \} ] `)' `;'
 
   <instance-name> ::= <ident> `[' <expression> `]' (indexed instance)
   \alt <ident> (named instance)
@@ -79,15 +84,15 @@
   <param-map> ::= [ <ident> `:' ] <expression>
 
   <gen-decl> ::= `generate' <ident> `=' <expression> `to' <expression> \\ `{' \{ <network-decl> \} `}'
+
   <statement> ::= <name> `=' <expression> `;' (assignment)
   \alt `if' `(' <expression> `)' `{' \{ <statement> \} `}' \\ \{ <elif-block>
     \} [ <else-block> ]
   \alt `for' <ident> `=' <expression> `to' <expression> \\ `{' \{ <statement> \} `}'
   %\alt `while' <expression> `{' \{ <statement> \} `}'
-  \alt `switch' <expression> \\ `{' <switch-case> \{ <switch-case> \}
-  [ `default' `{' <statement> \{ <statement> \} `}' ] `}'
+  \alt `switch' <expression> \\ `{' <switch-case> \{ <switch-case> \} [ `default' `{' <statement> \{ <statement> \} `}' ] `}'
   \alt `trace' `(' <format-string> \{ `,' <expression> \} )`;'
-  \alt `assert' `(' <expression> [ `,' <string> ] )`;'
+  \alt `assert' `(' <expression> [ `,' <string> ] `)'`;'
   %\alt `barrier' `;'
   \alt `break' `;'
   %\alt `return' [ <expression> ] `;'
@@ -98,7 +103,7 @@
 
   <else-block> ::= `else' `{' \{ <statement> \} `}'
 
-  <format-string> ::= `"' \{ <format-string-part> \} `"' `;'
+  <format-string> ::= `"' \{ <format-string-part> \} `"'
   
   <format-string-part> ::= `{}' (placeholder string)
   \alt <string-char>
@@ -136,8 +141,8 @@
 
   <literal> ::= <integer>
   \alt <floating>
-  \alt `"'\{ <string-char> \}`"' (string-literal)
-  \alt `[' <integer> \{ `,' <integer> \} `]' (array literal)  
+  \alt `"'\{ <string-char> \}`"' (String literal)
+  \alt `[' <integer> \{ `,' <integer> \} `]' (Array literal)  
   % TODO: Temporary limitation
   %\alt `[' <expression> \{ `,' <expression> \} `]' (array literal)
   \alt `true'
@@ -155,7 +160,7 @@
   \alt `bool' (boolean value)
   \alt `[' [ <expression> ] `]' <type> (array of type)
 
-  <ident> ::= <letter> \{ ( <letter> | <number> | `_' | `-' ) \} (identifier)
+  <ident> ::= <letter> \{ <letter> | <number> | `_' | `-' \} (identifier)
 
   % TODO: Make more specific
   <name> ::= <ident>
