--- a/docs/grammar.tex
+++ b/docs/grammar.tex
@@ -35,7 +35,7 @@
   <process> ::= [ `sync' | `async' ] `proc' <ident> \\ `(' [
              <params> ] `)' \{ <process-decl> \}\\ `{' \{ <statement> \} `}'
 
-  <network-decl> ::= <instance>
+  <network-decl> ::= <inst-decl>
   \alt <bus-decl>
   \alt <const-decl>
   \alt <gen-decl>
